blogst fixes_two

--- a/app/page-3.html
+++ b/app/page-3.html
@@ -41,12 +41,12 @@
                     </div>
                     <nav class="main-menu">
                         <ul class="main-ul">
-                            <li><a href="#">Solutions</a></li>
-                            <li><a href="#">Démo</a></li>
-                            <li><a href="#">Clients</a></li>
-                            <li><a href="#">Smart Tribune</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Nous contacter</a></li>
+                            <li><a href="page-2.html">Solutions</a></li>
+                            <li><a href="page-3.html">Démo</a></li>
+                            <li><a href="page-4.html">Clients</a></li>
+                            <li><a href="page-5.html">Smart Tribune</a></li>
+                            <li><a href="index.html">Blog</a></li>
+                            <li><a href="index.html">Nous contacter</a></li>
                         </ul>
                         <ul class="sub-adaptive-menu">
                             <li><a href="#">09 72 34 93 95</a></li>
@@ -64,6 +64,7 @@
             </div>
         </div>
     </header>
+    
 
 <div class="header-background">
     <section class="dark-section">
