--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
         <div class="row">
             <div class="col-12 col-md-12">
                 <div class="header-btnBlock">
-                    <button class="header-btn">Telecharger</button>
+                    <button class="header-btn">Télécharger</button>
                 </div>
                 <p class="header-bottom-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus eos, quis nihil, esse debitis nam impedit porro incidunt tempora nostrum iste.</p>
             </div>
@@ -190,7 +190,7 @@
                 <div class="col-12 col-sm-12 col-md-5 col-lg-4">
 
                     <aside class="first-right-block">
-                        <p class="first-caption">DÉSENGOORGEZ VOTRE SERVICE SUPPORT ET AMÉLIORER VOTRE EXPÉRIENCE CLIENT</p>
+                        <p class="first-caption">DÉSENGORGEZ VOTRE SERVICE SUPPORT ET AMÉLIORER VOTRE EXPÉRIENCE CLIENT</p>
                         <figure>
                             <img class="img-responsive" src="img/image-2.png" alt="Image">
                             <figcaption>
@@ -222,8 +222,7 @@
 				<div class="wrapper-section">
 					<div class="row">
 						<div class="col-12 col-md-12 col-lg-6">
-							<p>Abonnez-vous…</p>
-							<p class="mobile-caption-wr">Abonnez-vous à la <span сlass="accent">newsletter</span></p>
+							<p>Abonnez-vous à la <span сlass="accent">newsletter</span></p>
 						</div>
 						<div class="col-12 col-md-12 col-lg-6">
 							<form action="" method="post">
@@ -285,7 +284,7 @@
                                     <span>93500, Pantin</span></p>
                             </li>
                             <li class="second-location">
-                                <p>24 rue de Rôme<br>
+                                <p>24 rue de Rome<br>
                                     <span>13001, Marseille</span></p>
                             </li>
                             <li class="telephone">
