--- a/app/page-3.html
+++ b/app/page-3.html
@@ -24,15 +24,16 @@
     <header class="dark-header">
         <div class="container-fluid">
             <div class="row slick-dark-header">
-                <div class="col-5 col-md-4 col-lg-5 d-flex">
+                <div class="col-12 col-md-4 col-lg-5 d-flex">
                     <a href="#" class="logo">
-                        <img src="img/logo_white.svg" alt="logo">
+                        <img class="img-responsive" src="img/logo_white.svg" alt="logo">
                     </a>
                     <span class="logo-text">
                         |&nbsp;&nbsp;&nbsp;connecté à l&apos;esprit de vos clients
                     </span>
                 </div>
                 <div class="col-7 col-md-8 col-lg-7 d-flex flex-column">
+<!--
                     <div class="top-mnu">
                         <ul>
                             <li><a href="#" class="top-number">09 72 34 93 95</a></li>
@@ -60,6 +61,7 @@
                         <span></span>
                         <span></span>
                     </div>
+-->
                 </div>
             </div>
         </div>
