--- a/app/page-5.html
+++ b/app/page-5.html
@@ -68,10 +68,10 @@
             <div class="col-12">
                <div class="top-background">
                     <h1>Astronomy Or Astrology</h1>
-                    <p>CATÉGORIE</p>
+                    <a href="#">CATÉGORIE</a>
                     <div class="author-image-top"></div>
                     <div class="name-author-top">
-                        <span>Raphaël KRIVINE,</span>  le 19 décembre 2017
+                        <a href="#" class="name-links">Raphaël KRIVINE, <span>le 19 décembre 2017</span></a>
                     </div>
                </div>
             </div>
@@ -83,9 +83,9 @@
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-7">
                     <h1 class="caption-one">The Glossary Of Telescopes</h1>
-                    <p class="sub-caption-one">Kansas City’s first recorded barbequer was Henry Perry back in 1908. Perry become very well known for his succulent ribs and would serve them to customer who would come from miles away. Perry converted an old trolley barn into a restaurant and would serve is ribs on newspaper for 25 cents a slab. “Old Man Perry’s” restaurant was located at 19th & Highland and was later sold to George Gates and Charlie Bryant. It become known as Arthur Bryant’s and is still today regarded as one of America’s greatest rib joints. Today Kansas City boast over 90 rib restaurants.</p>
+                    <p class="sub-caption-one"><b>Kansas City’s first recorded barbequer was Henry Perry back in 1908.</b> Perry become very well known for his succulent ribs and would serve them to customer who would come from miles away. Perry converted an old trolley barn into a restaurant and would serve is ribs on newspaper for 25 cents a slab. “Old Man Perry’s” restaurant was located at 19th & Highland and was later sold to George Gates and Charlie Bryant. It become known as Arthur Bryant’s and is still today regarded as one of America’s greatest rib joints. Today Kansas City boast over 90 rib restaurants.</p>
                     <h2 class="caption-two">Barbecue Sauce For A Perfect Barbeque</h2>
-                    <p class="sub-caption-two">Kansas City’s first recorded barbequer was Henry Perry back in 1908. Perry become very well known for his succulent ribs and would serve them to customer who would come from miles away. Perry converted an old trolley barn into a restaurant and would serve is ribs on newspaper for 25 cents a slab. “Old Man Perry’s” restaurant was located at 19th & Highland and was later sold to George Gates and Charlie Bryant. It become known as Arthur Bryant’s and is still today regarded as one of America’s greatest rib joints. Today Kansas City boast over 90 rib restaurants.</p>
+                    <p class="sub-caption-two"><b>Kansas City’s first recorded barbequer was Henry Perry back in 1908.</b> Perry become very well known for his succulent ribs and would serve them to customer who would come from miles away. Perry converted an old trolley barn into a restaurant and would serve is ribs on newspaper for 25 cents a slab. “Old Man Perry’s” restaurant was located at 19th & Highland and was later sold to George Gates and Charlie Bryant. It become known as Arthur Bryant’s and is still today regarded as one of America’s greatest rib joints. Today Kansas City boast over 90 rib restaurants.</p>
                     <div class="quote">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
                     </div>
@@ -131,13 +131,13 @@
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-6">
                                 <p class="prev-caption">
-                                    Proven Techniques Help You Herbal Breast Enlargement Guaranteed
+                                    <a href="#" class="links-for-article">Proven Techniques Help You Herbal Breast Enlargement Guaranteed</a>
                                 </p>
                                 <a href=""><img class="img-responsive" src="img/nature-1.png" alt="Nature-prev"></a>
                             </div>
                             <div class="col-6 align-self-end disp-fix">
                                 <p class="next-caption">
-                                    Choosing An Antiaging Eye Cream
+                                    <a href="#" class="links-for-article">Choosing An Antiaging Eye Cream</a>
                                 </p>
                                 <a href=""><img class="img-responsive" src="img/nature-2.png" alt="Nature-next"></a>
                             </div>
@@ -252,7 +252,7 @@
 
                             <div class="form-group">
                                 <label for="comment">Commentaire</label>
-                                <textarea class="form-control" rows="5" id="comment" placeholder="Commentaire"></textarea>
+                                <textarea class="form-control" rows="5" id="comment" placeholder="Entrez votre commentaire..."></textarea>
                             </div>
 
                             <div class="form-group">
