fixes blogst yet

--- a/app/page-4.html
+++ b/app/page-4.html
@@ -27,7 +27,7 @@
                         <img src="img/logo.svg" alt="logo">
                     </a>
                     <span class="logo-text">
-                        |&nbsp;&nbsp;&nbsp;connecté à l&apos;esprit de vos clients
+                        connecté à l&apos;esprit de vos clients
                     </span>
                 </div>
                 <div class="col-7 col-md-8 col-lg-7 d-flex flex-column">
