--- a/app/page-2.html
+++ b/app/page-2.html
@@ -28,7 +28,7 @@
                         <img src="img/logo.svg" alt="logo">
                     </a>
                     <span class="logo-text">
-                        |&nbsp;&nbsp;&nbsp;connecté à l&apos;esprit de vos clients
+                        connecté à l&apos;esprit de vos clients
                     </span>
                 </div>
             </div>
