--- a/app/page-3.html
+++ b/app/page-3.html
@@ -29,7 +29,7 @@
                         <img class="img-responsive" src="img/logo_white.svg" alt="logo">
                     </a>
                     <span class="logo-text">
-                        |&nbsp;&nbsp;&nbsp;connecté à l&apos;esprit de vos clients
+                        connecté à l&apos;esprit de vos clients
                     </span>
                 </div>
                 <div class="col-7 col-md-8 col-lg-7 d-flex flex-column">
