--- a/app/page-5.html
+++ b/app/page-5.html
@@ -82,9 +82,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-7">
-                    <h1 class="caption-one">The Glossary Of Telescopes</h1>
+                    <h1 class="caption-one"><a href="#">The Glossary Of Telescopes</a></h1>
                     <p class="sub-caption-one"><b>Kansas City’s first recorded barbequer was Henry Perry back in 1908.</b> Perry become very well known for his succulent ribs and would serve them to customer who would come from miles away. Perry converted an old trolley barn into a restaurant and would serve is ribs on newspaper for 25 cents a slab. “Old Man Perry’s” restaurant was located at 19th & Highland and was later sold to George Gates and Charlie Bryant. It become known as Arthur Bryant’s and is still today regarded as one of America’s greatest rib joints. Today Kansas City boast over 90 rib restaurants.</p>
-                    <h2 class="caption-two">Barbecue Sauce For A Perfect Barbeque</h2>
+                    <h2 class="caption-two"><a href="#">Barbecue Sauce For A Perfect Barbeque</a></h2>
                     <p class="sub-caption-two"><b>Kansas City’s first recorded barbequer was Henry Perry back in 1908.</b> Perry become very well known for his succulent ribs and would serve them to customer who would come from miles away. Perry converted an old trolley barn into a restaurant and would serve is ribs on newspaper for 25 cents a slab. “Old Man Perry’s” restaurant was located at 19th & Highland and was later sold to George Gates and Charlie Bryant. It become known as Arthur Bryant’s and is still today regarded as one of America’s greatest rib joints. Today Kansas City boast over 90 rib restaurants.</p>
                     <div class="quote">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
@@ -93,7 +93,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, <a href="#">sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
                     </p>
                     <img class="img-responsive" src="img/image-5.png" alt="">
-                    <h2 class="caption-two">Barbecue Sauce For A Perfect Barbeque</h2>
+                    <h2 class="caption-two"><a href="#">Barbecue Sauce For A Perfect Barbeque</a></h2>
                     <p class="sub-caption-two">Kansas City’s first recorded barbequer was Henry Perry back in 1908. Perry become very well known for his succulent ribs and would serve them to customer who would come from miles away. Perry converted an old trolley barn into <a href="#">a restaurant and would serve is ribs</a> on newspaper for 25 cents a slab. “Old Man Perry’s” restaurant was located at 19th & Highland and was later sold to George Gates and Charlie Bryant. It become known as Arthur Bryant’s and is still today regarded as one of America’s greatest rib joints. Today Kansas City boast over 90 rib restaurants.</p>
                     <div class="third-right-block-secondary change-third-block">
                        <p>
@@ -277,7 +277,7 @@
         </div>
     </section>
 
-        <section>
+    <section>
         <div class="container-fluid right-blocks-mobile">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-5">
@@ -341,6 +341,18 @@
                </div>
            </div>
        </div>
+   </section>
+   
+   <section class="all-captions">
+   		<div class="container">
+   			<div class="row">
+   				<div class="col">
+   					<h1 class="first-title">Titre H1</h1>
+   					<h1 class="first-title-second">Titre H1</h1>
+   					<h2 class="second-title">Titre H2</h2>
+   				</div>
+   			</div>
+   		</div>
    </section>
    
    
