--- a/app/index.html
+++ b/app/index.html
@@ -203,11 +203,11 @@
                             Les plus lus
                         </p>
                         <ul class="main-list">
-                            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
+                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
+                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
+                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
+                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
                         </ul>
                     </aside>
 
