--- a/app/page-3.html
+++ b/app/page-3.html
@@ -120,6 +120,7 @@
 
     <footer>
         <div class="container-fluid fix">
+<!--
             <div class="footer-first-part">
                 <div class="row justify-content-center">
                     <div class="col-12 col-sm-4 col-md-2">
@@ -179,18 +180,10 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-second-part">
+-->
+            <div class="footer-second-part fix-footer-third-page">
                 <div class="row justify-content-center">
-                    <div class="col-12 col-sm-10 col-md-5">
-                        <ul>
-                            <li><a href="#">Mentions légales</a></li>
-                            <li><a href="#">Confidentialité</a></li>
-                            <li><a href="#">CGU</a></li>
-                            <li><a href="#">CGV</a></li>
-                            <li><a href="#">Plan du site</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-12 col-sm-10 col-md-5">
+                    <div class="col">
                         <span class="copyrigth">Copyright © 2018 Smart Tribune. Tous droits réservés.</span>
                     </div>
                 </div>
