--- a/app/page-4.html
+++ b/app/page-4.html
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="row">
                 <div class="col col-sm-12 col-md-12 col-lg-12">
-                    <h1>Le blog de la Relation Client et du Selfcare</h1>
+                    <h1>Le blog de la <b>Relation Client</b> et du <b>Selfcare</b></h1>
                     <p class="sub-descripion">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                     <p>Abonnez-vous à <span>l’actualité</span> du selfcare<span> et profitez de ressources exclusives !</span></p>
                 </div>
@@ -109,7 +109,7 @@
                         <img class="img-responsive" src="img/image-5.png" alt="Image">
                         <p class="description-section">
                             There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…
-                            <button>LIRE LA SUITE</button>
+                            <button>Lire La Suite</button>
                         </p>
                      </div>    
                     
@@ -275,11 +275,11 @@
                    <aside class="third-block-lists db-fix">
                        <p>Nos thématiques</p>
                        <ul>
-                           <li>Thématique 1</li>
-                           <li>Thématique 2</li>
-                           <li>Thématique 3</li>
-                           <li>Thématique 4</li>
-                           <li>Thématique 5</li>
+                           <li><a href="#">Thématique 1</a></li>
+                           <li><a href="#">Thématique 2</a></li>
+                           <li><a href="#">Thématique 3</a></li>
+                           <li><a href="#">Thématique 4</a></li>
+                           <li><a href="#">Thématique 5</a></li>
                        </ul>
                    </aside>
                </div>
