--- a/app/page-5.html
+++ b/app/page-5.html
@@ -159,11 +159,11 @@
                    <aside class="third-right-block">
                        <p class="third-caption">les plus lus</p>
                        <ul class="third-main-list">
-                           <li>Comment On The Importance Of Human Life</li>
-                           <li>The Basics Of Western Astrology Explained</li>
-                           <li>Always Look On The Bright Side Of Life</li>
-                           <li>Peace On Earth A Wonderful Wish But No Way</li>
-                           <li>Vampires The Romantic Ideology Behind Them</li>
+                           <li><a href="#">Comment On The Importance Of Human Life</a></li>
+                           <li><a href="#">The Basics Of Western Astrology Explained</a></li>
+                           <li><a href="#">Always Look On The Bright Side Of Life</a></li>
+                           <li><a href="#">Peace On Earth A Wonderful Wish But No Way</a></li>
+                           <li><a href="#">Vampires The Romantic Ideology Behind Them</a></li>
                        </ul>
                    </aside>
                    <!--Second sidebar-->
@@ -203,11 +203,11 @@
                    <aside class="third-block-lists">
                        <p>Nos thématiques</p>
                        <ul>
-                           <li>Thématique 1</li>
-                           <li>Thématique 2</li>
-                           <li>Thématique 3</li>
-                           <li>Thématique 4</li>
-                           <li>Thématique 5</li>
+                           <li><a href="#">Thématique 1</a></li>
+                           <li><a href="#">Thématique 2</a></li>
+                           <li><a href="#">Thématique 3</a></li>
+                           <li><a href="#">Thématique 4</a></li>
+                           <li><a href="#">Thématique 5</a></li>
                        </ul>
                    </aside>
                 </div>
@@ -318,11 +318,11 @@
                    <aside class="third-block-lists third-block-lists-mobile">
                        <p>Nos thématiques</p>
                        <ul>
-                           <li>Thématique 1</li>
-                           <li>Thématique 2</li>
-                           <li>Thématique 3</li>
-                           <li>Thématique 4</li>
-                           <li>Thématique 5</li>
+                           <li><a href="#">Thématique 1</a></li>
+                           <li><a href="#">Thématique 2</a></li>
+                           <li><a href="#">Thématique 3</a></li>
+                           <li><a href="#">Thématique 4</a></li>
+                           <li><a href="#">Thématique 5</a></li>
                        </ul>
                    </aside>
                 </div>
