--- a/app/page-4.html
+++ b/app/page-4.html
@@ -105,7 +105,7 @@
                     <div class="main-post">
                         <a href="#" class="main-descr-post"><h2>Titre de l’article à la une</h2></a>
                         <p class="sub-description-posts">Par <a href="#">John Doe</a> le 06 dec. à 08h00</p>
-                        <p class="category-post">CATÉGORIE</p>
+                        <p class="category-post"><a href="#">CATÉGORIE</a></p>
                         <img class="img-responsive" src="img/image-5.png" alt="Image">
                         <p class="description-section">
                             There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…
@@ -118,7 +118,7 @@
                                 <a href=""><h4>An amazing piece of astronomy trivia</h4></a>
                                 <div class="category-block-top d-block d-sm-none">
                                     <p class="user-category-top">Par <a href="">John Doe</a> le 06 dec. a 8h00</p>
-                                    <p class="category-top">CATÉGORIE</p>
+                                    <p class="category-top"><a href="#">CATÉGORIE</a></p>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
@@ -127,7 +127,7 @@
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
-                                            <span class="category">Category</span>
+                                            <span class="category"><a href="#">Category</a></span>
                                             <button class="btn-category">LIRE LA SUITE</button>
                                         </p>
                                     </div>
@@ -137,7 +137,7 @@
                                 <a href=""><h4>An amazing piece of astronomy trivia </h4></a>
                                 <div class="category-block-top d-block d-sm-none">
                                     <p class="user-category-top">Par <a href="">John Doe</a> le 06 dec. a 8h00</p>
-                                    <p class="category-top">CATÉGORIE</p>
+                                    <p class="category-top"><a href="#">CATÉGORIE</a></p>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
@@ -146,7 +146,7 @@
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
-                                            <span class="category">Category</span>
+                                            <span class="category"><a href="#">Category</a></span>
                                             <button class="btn-category">LIRE LA SUITE</button>
                                         </p>
                                     </div>
@@ -156,7 +156,7 @@
                                 <a href=""><h4>An amazing piece of astronomy trivia </h4></a>
                                 <div class="category-block-top d-block d-sm-none">
                                     <p class="user-category-top">Par <a href="">John Doe</a> le 06 dec. a 8h00</p>
-                                    <p class="category-top">CATÉGORIE</p>
+                                    <p class="category-top"><a href="#">CATÉGORIE</a></p>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
@@ -165,7 +165,7 @@
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
-                                            <span class="category">Category</span>
+                                            <span class="category"><a href="#">Category</a></span>
                                             <button class="btn-category">LIRE LA SUITE</button>
                                         </p>
                                     </div>
@@ -175,7 +175,7 @@
                                 <a href=""><h4>An amazing piece of astronomy trivia </h4></a>
                                 <div class="category-block-top d-block d-sm-none">
                                     <p class="user-category-top">Par <a href="">John Doe</a> le 06 dec. a 8h00</p>
-                                    <p class="category-top">CATÉGORIE</p>
+                                    <p class="category-top"><a href="#">CATÉGORIE</a></p>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
@@ -184,7 +184,7 @@
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
-                                            <span class="category">Category</span>
+                                            <span class="category"><a href="#">Category</a></span>
                                             <button class="btn-category">LIRE LA SUITE</button>
                                         </p>
                                     </div>
@@ -194,7 +194,7 @@
                                 <a href=""><h4>An amazing piece of astronomy trivia </h4></a>
                                 <div class="category-block-top d-block d-sm-none">
                                     <p class="user-category-top">Par <a href="">John Doe</a> le 06 dec. a 8h00</p>
-                                    <p class="category-top">CATÉGORIE</p>
+                                    <p class="category-top"><a href="#">CATÉGORIE</a></p>
                                 </div>
                                 <div class="row">
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
@@ -203,7 +203,7 @@
                                     <div class="col-12 col-sm-12 col-md-12 col-lg-6">
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
-                                            <span class="category">Category</span>
+                                            <span class="category"><a href="#">Category</a></span>
                                             <button class="btn-category">LIRE LA SUITE</button>
                                         </p>
                                     </div>
