--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
         </div>
     </header>
 
-<div class="header-background">
+<div class="header-background home-fix-bg">
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-12">
@@ -120,7 +120,7 @@
                         <a href="#"><h4>An amazing piece of astronomy trivia </h4></a>
                         <div class="category-block-top d-block d-sm-none">
                             <p class="user-category-top">Par <a href="">John Doe</a> le 06 dec. a 8h00</p>
-                            <p class="category-top">CATÉGORIE</p>
+                            <p class="category-top"><a href="#">CATÉGORIE</a></p>
                         </div>	
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-5">
@@ -131,7 +131,7 @@
                             <div class="col-12 col-sm-12 col-md-12 col-lg-7">
                                 <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                     <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
-                                    <span class="category d-none d-sm-block">Category</span>
+                                    <span class="category d-none d-sm-block"><a href="#">Category</a></span>
                                     <button class="btn-category">LIRE LA SUITE</button>
                                 </p>
                             </div>
@@ -142,7 +142,7 @@
                         <a href="#"><h4>An amazing piece of astronomy trivia </h4></a>
                         <div class="category-block-top d-block d-sm-none">
                             <p class="user-category-top">Par <a href="">John Doe</a> le 06 dec. a 8h00</p>
-                            <p class="category-top">CATÉGORIE</p>
+                            <p class="category-top"><a href="#">CATÉGORIE</a></p>
                         </div>	
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-5">
@@ -153,7 +153,7 @@
                             <div class="col-12 col-sm-12 col-md-12 col-lg-7">
                                 <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                     <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
-                                    <span class="category d-none d-sm-block">Category</span>
+                                    <span class="category d-none d-sm-block"><a href="#">Category</a></span>
                                     <button class="btn-category">LIRE LA SUITE</button>
                                 </p>
                             </div>
@@ -164,7 +164,7 @@
                         <a href="#"><h4>An amazing piece of astronomy trivia </h4></a>
                         <div class="category-block-top d-block d-sm-none">
                             <p class="user-category-top">Par <a href="">John Doe</a> le 06 dec. a 8h00</p>
-                            <p class="category-top">CATÉGORIE</p>
+                            <p class="category-top"><a href="#">CATÉGORIE</a></p>
                         </div>	
                         <div class="row">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-5">
@@ -175,7 +175,7 @@
                             <div class="col-12 col-sm-12 col-md-12 col-lg-7">
                                 <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                     <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
-                                    <span class="category d-none d-sm-block">Category</span>
+                                    <span class="category d-none d-sm-block"><a href="#">Category</a></span>
                                     <button class="btn-category">LIRE LA SUITE</button>
                                 </p>
                             </div>
