--- a/app/page-3.html
+++ b/app/page-3.html
@@ -22,7 +22,7 @@
 
 <body>
     <header class="dark-header">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row slick-dark-header">
                 <div class="col-12 col-md-4 col-lg-5 d-flex">
                     <a href="#" class="logo">
