--- a/app/page-4.html
+++ b/app/page-4.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row slick-header">
                 <div class="col-5 col-md-4 col-lg-5 d-flex">
                     <a href="#" class="logo">
