--- a/app/page-5.html
+++ b/app/page-5.html
@@ -20,7 +20,7 @@
 </head>
 <body>
        <header class="fix-hdr-fv">
-        <div class="container-fluid">
+        <div class="container">
             <div class="row slick-header">
                 <div class="col-5 col-md-4 col-lg-5 d-flex">
                     <a href="#" class="logo">
@@ -94,7 +94,7 @@
                     </p>
                     <img class="img-responsive" src="img/image-5.png" alt="">
                     <h2 class="caption-two"><a href="#">Barbecue Sauce For A Perfect Barbeque</a></h2>
-                    <p class="sub-caption-two">Kansas City’s first recorded barbequer was Henry Perry back in 1908. Perry become very well known for his succulent ribs and would serve them to customer who would come from miles away. Perry converted an old trolley barn into <a href="#">a restaurant and would serve is ribs</a> on newspaper for 25 cents a slab. “Old Man Perry’s” restaurant was located at 19th & Highland and was later sold to George Gates and Charlie Bryant. It become known as Arthur Bryant’s and is still today regarded as one of America’s greatest rib joints. Today Kansas City boast over 90 rib restaurants.</p>
+                    <p class="sub-caption-two"><b>Kansas City’s first recorded barbequer was Henry Perry back in 1908.</b> Perry become very well known for his succulent ribs and would serve them to customer who would come from miles away. Perry converted an old trolley barn into <a href="#">a restaurant and would serve is ribs</a> on newspaper for 25 cents a slab. “Old Man Perry’s” restaurant was located at 19th & Highland and was later sold to George Gates and Charlie Bryant. It become known as Arthur Bryant’s and is still today regarded as one of America’s greatest rib joints. Today Kansas City boast over 90 rib restaurants.</p>
                     <div class="third-right-block-secondary change-third-block">
                        <p>
                            DÉSENGORGEZ VOTRE SERVICE SUPPORT ET AMÉLIORER VOTRE EXPÉRIENCE CLIENT
