--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <header>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row slick-header">
                 <div class="col-5 col-md-4 col-lg-5 d-flex">
                     <a href="#" class="logo">
