--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-
+<div class="fix-scroll-for-mnu">
     <header>
         <div class="container">
             <div class="row slick-header">
@@ -312,7 +312,7 @@
             </div>
         </div>
     </footer>
-
+</div>
 <!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
