--- a/app/page-5.html
+++ b/app/page-5.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
+      <div class="fix-scroll-for-mnu">
        <header class="fix-hdr-fv">
         <div class="container">
             <div class="row slick-header">
@@ -424,7 +425,7 @@
             </div>
         </div>
     </footer>
-    
+	</div>
 <!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
