newssteller span fixed

--- a/app/index.html
+++ b/app/index.html
@@ -222,7 +222,7 @@
 				<div class="wrapper-section">
 					<div class="row">
 						<div class="col-12 col-md-12 col-lg-6">
-							<p>Abonnez-vous à la <span сlass="accent">newsletter</span></p>
+							<p>Abonnez-vous à la <span сlass="accent-txt">newsletter</span></p>
 						</div>
 						<div class="col-12 col-md-12 col-lg-6">
 							<form action="" method="post">
