--- a/app/page-4.html
+++ b/app/page-4.html
@@ -107,10 +107,10 @@
                         <a href="#" class="main-descr-post"><h2>Titre de l’article à la une</h2></a>
                         <p class="sub-description-posts">Par <a href="#">John Doe</a> le 06 dec. à 08h00</p>
                         <p class="category-post"><a href="#">CATÉGORIE</a></p>
-                        <img class="img-responsive" src="img/image-5.png" alt="Image">
+                        <a href="#"><img class="img-responsive" src="img/image-5.png" alt="Image"></a>
                         <p class="description-section">
                             There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…
-                            <button>Lire La Suite</button>
+                            <button><a href="#">Lire la suite</a></button>
                         </p>
                      </div>    
                     
@@ -129,7 +129,7 @@
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
                                             <span class="category"><a href="#">Category</a></span>
-                                            <button class="btn-category">LIRE LA SUITE</button>
+                                            <a class="btn-category" href="#">LIRE LA SUITE</a>
                                         </p>
                                     </div>
                             </div>
@@ -148,7 +148,7 @@
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
                                             <span class="category"><a href="#">Category</a></span>
-                                            <button class="btn-category">LIRE LA SUITE</button>
+                                            <a class="btn-category" href="#">LIRE LA SUITE</a>
                                         </p>
                                     </div>
                             </div>
@@ -167,7 +167,7 @@
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
                                             <span class="category"><a href="#">Category</a></span>
-                                            <button class="btn-category">LIRE LA SUITE</button>
+                                            <a class="btn-category" href="#">LIRE LA SUITE</a>
                                         </p>
                                     </div>
                             </div>
@@ -186,7 +186,7 @@
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
                                             <span class="category"><a href="#">Category</a></span>
-                                            <button class="btn-category">LIRE LA SUITE</button>
+                                            <a class="btn-category" href="#">LIRE LA SUITE</a>
                                         </p>
                                     </div>
                             </div>
@@ -205,7 +205,7 @@
                                         <p>There are many kinds of narratives and organizing principles. Science is driven by evidence gathered in experiments, and by the falsification of extant theories and their replacement with newer…<br>
                                             <span class="user-category">Par <a href="">John Doe</a> le 06 dec. a 8h00</span><br>
                                             <span class="category"><a href="#">Category</a></span>
-                                            <button class="btn-category">LIRE LA SUITE</button>
+                                           <a class="btn-category" href="#">LIRE LA SUITE</a>
                                         </p>
                                     </div>
                             </div>
@@ -296,7 +296,7 @@
 					   <p>
 						   Enrichissez votre connaissance client et <span>améliorez votre business.</span>
 					   </p>
-					   <button>Réservez votre démonstration</button>
+					   <button><a href="#">Réservez votre démonstration</a></button>
 				   </div>
 			   </div>
 		   </div>
