--- a/app/page-5.html
+++ b/app/page-5.html
@@ -344,6 +344,18 @@
        </div>
    </section>
    
+   <section class="titles-for-example">
+   		<div class="container">
+   			<div class="row">
+   				<div class="col">
+   					<h1>Titre H1</h1>
+   					<h1>Titre H1</h1>
+   					<h2>Titre H2</h2>
+   				</div>
+   			</div>
+   		</div>
+   </section>
+   
    
    
     <footer>
