two last changes

--- a/app/page-5.html
+++ b/app/page-5.html
@@ -349,8 +349,41 @@
    			<div class="row">
    				<div class="col">
    					<h1>Titre H1</h1>
+   					<p class="description-for-h1">
+   						This title is located in the header of the page. <br>
+   						<span class="title-style">Styles for title:</span>
+   						<span class="description-style">
+   							position: absolute; <br>
+    						top: 40%; <br>
+    						left: 50%; <br>
+   							font-size: 43px; <br>
+   							font-family: "WorkSans SemiBold",Arial,sans-serif"; <br>
+   							color: #fff; <br>
+   						</span>
+   					</p>
    					<h1>Titre H1</h1>
+   					<p class="description-for-h1">
+   						This title is located after the page header. <br>
+   						<span class="title-style">Styles for title:</span>
+   						<span class="description-style">
+							font-family: "WorkSans Medium",Arial,sans-serif;<br>
+							font-size: 42px;<br>
+							margin-bottom: 2rem;<br>
+							color: #32325d;<br>
+   						</span>
+   					</p>
    					<h2>Titre H2</h2>
+   					<p class="description-for-h1">
+   						This header is located after the header of the first level, and occurs twice on the page. <br>
+   						<span class="title-style">Styles for title:</span>
+   						<span class="description-style">
+							font-family: "WorkSans Medium",Arial,sans-serif;<br>
+							font-size: 30px;<br>
+							margin-top: 2rem;<br>
+							margin-bottom: 2rem;<br>
+							color: #32325d;<br>
+   						</span>
+   					</p>
    				</div>
    			</div>
    		</div>
