--- a/app/index.html
+++ b/app/index.html
@@ -203,11 +203,11 @@
                             Les plus lus
                         </p>
                         <ul class="main-list">
-                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
-                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
-                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
-                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
-                            <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></li>
+                            <li><a href="#">Comment On The Importance Of Human Life</a></li>
+                            <li><a href="#">The Basics Of Western Astrology Explained</a></li>
+                            <li><a href="#">Always Look On The Bright Side Of Life</a></li>
+                            <li><a href="#">Peace On Earth A Wonderful Wish But No Way.</a></li>
+                            <li><a href="#">Vampires The Romantic Ideology Behind Them</a></li>
                         </ul>
                     </aside>
 
